# BilibiliHistoryFetcher

./: README.md  install_dependencies.py  pyproject.toml  test_onnx_runner.py
config/: config.yaml
docker/: Dockerfile.cpu  Dockerfile.cuda
routers/: audio_to_text.py  download.py  video_summary.py  whisper.py  wisper.py
scripts/: check_data_integrity.py  system_resource_check.py  yutto_runner.py
