[project]
name = "bilibilihistoryfetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp~=3.11.13",
  "email-validator>=2.1.0",
  "fastapi~=0.115.8",
  "httpx~=0.28.1",
  "huggingface-hub>=0.30.2",
  "jieba~=0.42.1",
  "jinja2~=3.1.5",
  "kaldi-native-fbank>=1.21.1",
  "librosa>=0.11.0",
  "numpy~=1.26.4",
  "onnxruntime>=1.21.0",
  "openpyxl~=3.1.5",
  "pandas~=2.2.3",
  "pillow~=10.2.0",
  "psutil>=5.9.0",
  "pydantic~=2.10.6",
  "pydub>=0.25.1",
  "pyecharts~=2.0.8",
  "pymysql~=1.1.1",
  "python-dateutil>=2.8.2",
  "pyyaml~=6.0.2",
  "qrcode~=8.0",
  "requests~=2.32.3",
  "schedule~=1.2.2",
  "scikit-learn~=1.5.2",
  "snownlp~=0.12.3",
  "soundfile>=0.13.1",
  "tqdm>=4.66.0",
  "urllib3~=2.3.0",
  "uvicorn~=0.32.1",
  "yutto~=2.0.0",
]
